[package]
name = "samson_http"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/samsonjj/samson_http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-idents = "1.1.3"
lazy_static = "1.4.0"
uriparse = "0.6.4"
url = "2.3.1"
