[package]
name = "samson_http"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/samsonjj/samson_http"
description = "A samson HTTP library. HTTP request/response parsing and HTTP server."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-idents = "1.1.3"
lazy_static = "1.4.0"
url = "2.3.1"
